added git repository in .csproj

--- a/src/MFluentBuilderExtensions/MFluentBuilderExtensions.csproj
+++ b/src/MFluentBuilderExtensions/MFluentBuilderExtensions.csproj
@@ -2,6 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
+    <RepositoryUrl>https://github.com/mirojica/MFluentBuilderExtensions.git</RepositoryUrl> 
+    <RepositoryType>git</RepositoryType> 
   </PropertyGroup>
   
   <ItemGroup>
